[project]
name = "aiwithgemini"
version = "0.1.0"
description = "aiWithGemini using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
aiwithgemini = "aiwithgemini.main:run"
run_crew = "aiwithgemini.main:run"
train = "aiwithgemini.main:train"
replay = "aiwithgemini.main:replay"
test = "aiwithgemini.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
